<resources>
    <string name="app_name">Mi Línea Uno</string>

    <string name="titulo_opcion_inicio">Inicio</string>
    <string name="titulo_opcion_elegir_tarjeta">Elegir Tarjeta</string>
    <string name="titulo_opcion_horario">Horarios</string>
    <string name="titulo_opcion_reestablecer">Corregir saldo</string>
    <string name="titulo_opcion_movimientos">Movimientos</string>
    <string name="titulo_opcion_ayuda">Acerca de</string>
    <string name="titulo_opcion_viajes">Calcular viaje</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tarjeta">Tarjeta Adulto</string>
    <string name="saldo">Saldo (S/.)</string>
    <string name="tsaldo">0.00</string>
    <string name="viajes">Viajes posibles</string>
    <string name="tviajes">0</string>
    <string name="as">Agregar saldo</string>
    <string name="mv">Marcar viaje</string>
    <string name="title_activity_elegir_tarjeta">Elegir Tarjeta</string>

    <string name="tmu">Universitario</string>
    <string name="tme">Escolar</string>
    <string name="ta">Adulto</string>

    <string name="title_activity_agregar_saldo">Agregar Saldo</string>
    <string name="cantidad">Monto recarga</string>
    <string name="monto_maximo">Monto máximo</string>
    <string name="monto">0.00</string>
    <string name="title_activity_marcar_viaje">Marcar Viaje</string>

    <string name="hello_world">Hello world!</string>
    <string name="cp">Cantidad de personas</string>
    <string name="tviaje">Total viaje</string>
    <string name="srestante">Saldo restante</string>
    <string name="marcar">Marcar viaje</string>


    <string name="sa">SALDO ACTUAL</string>
    <string name="sc">Saldo correcto</string>
    <string name="reestablecer">Corregir Saldo</string>
    <string name="mensaje_reestablecer">¿El saldo actual de tu tarjeta es incorrecto?</string>
    <string name="title_activity_informacion_estacion">InformacionEstacionActivity</string>


    <string name="mensaje_calcularviaje">¿Cuándo realizará su viaje?</string>
    <string name="hora_viaje">Hora</string>

    <string name="alert_desc1">Hora seleccionada</string>
    <string name="alert_desc2">Llegada del tren</string>
    <string name="alert_desc3">Tiempo de viaje</string>
    <string name="alert_desc4">Llegada al destino</string>
    <string name="title_activity_estacion_maps">Map</string>

    <!-- Horarios -->
    <string name="direcVES">Dirección a V. E. S.</string>
    <string name="direcBayovar">Dirección a Bayóvar</string>
    <string name="llegadaVES">Llegada a V. E. S.</string>
    <string name="llegadaBayovar">Llegada a Bayóvar</string>
    
    <!-- Sobre Mi Metro Lima -->
    <string name="nombre_completo_app">Mi Línea Uno v1.0</string>
    <string name="iniciativa_app">Una iniciativa de</string>
    <string name="nombre_empresa">BITONE TECHNOLOGIES</string>
    <string name="derechos_reservados">Todos los derechos reservados</string>
    <string name="contacto_empresa">contacto@bitoneperu.com</string>
    <string name="creditos_andina">Créditos de imagen de fondo: ANDINA</string>
    <string name="url_andina">http://www.andina.com.pe/</string>

    <string name="url_bitone">http://www.bitoneperu.com/milineauno</string>
    <string name="email_bitone">contacto@bitoneperu.com</string>
    <string name="email_asunto">Contacto BitOne</string>
</resources>
