<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bitone.saldometro.controller.MarcarViajeActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        style="@style/padding">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/saldo"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tvSaldoA"
                android:textSize="15sp"
                android:text="@string/tsaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                />
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/cp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnMasPersonas"
                android:background="@drawable/button_metro"
                android:text="+"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"

                />
            <EditText
                android:textColor="#000000"
                android:enabled="false"
                android:id="@+id/txtPersonas"
                android:gravity="center"
                android:layout_width="match_parent"
                android:text="1"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/btnMenosPersonas"
                android:background="@drawable/button_metro"
                android:text="-"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"

                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <TextView
                    android:text="@string/tviaje"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/tvTotalViaje"
                    android:textSize="15sp"
                    android:hint="@string/tsaldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                >
                <TextView
                    android:text="@string/srestante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/tvSaldoRestante"
                    android:hint="@string/tsaldo"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnMarcar"
                android:background="@drawable/button_metro"
                android:text="@string/marcar"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
