<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    android:paddingBottom="16sp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="RESULTADO OBTENIDO"
            android:textStyle="bold"
            android:background="#006400"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:width="0dp"/>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/padding"
        >
        <TextView
            android:textColor="#000000"
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="@string/alert_desc1"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_weight="4"

            android:width="0dp"/>
        <TextView
            android:id="@+id/tvHoraEspera"
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="hh:mm"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/padding"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="@string/alert_desc2"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_weight="4"
            android:width="0dp"/>
        <TextView
            android:id="@+id/tvHoraLlegTren"
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="hh:mm"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/padding"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="@string/alert_desc3"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="left"
            android:layout_weight="4"
            android:width="0dp"/>
        <TextView
            android:id="@+id/tvTiempoEstimado"
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="hh:mm"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/padding"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="@string/alert_desc4"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="left"
            android:layout_weight="4"
            android:width="0dp"/>
        <TextView
            android:id="@+id/tvHoraLlegada"
            android:layout_width="0sp"
            android:layout_height="40dp"
            android:text="hh:mm"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"/>
    </LinearLayout>

</LinearLayout>
