<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bitone.saldometro.controller.ElegirTarjetaActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="Seleccione el tipo de tarjeta que usted usa"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

        <View style="@style/Divider"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/ta"
                android:id="@+id/rbTa"
                android:layout_weight="1"
                android:focusable="false" />
            <ImageView
                android:src="@drawable/mtarjetdulto"
                android:layout_width="60sp"
                android:layout_height="70sp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tmu"
                android:id="@+id/rbTmu"
                android:layout_weight="1"/>
            <ImageView
                android:src="@drawable/mtarjetmedio"
                android:layout_width="60sp"
                android:layout_height="70sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tme"
                android:id="@+id/rbTme"
                android:layout_weight="1" />


            <ImageView
                android:src="@drawable/mtarjetmedio"
                android:layout_width="60sp"
                android:layout_height="70sp"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
